--- a/frontend/src/pages/BlogDetails/BlogDetails.css
+++ b/frontend/src/pages/BlogDetails/BlogDetails.css
@@ -2027,8 +2027,9 @@
 /* ==================================== */
 @media (max-width: 1399px) {
   .blog_details_container {
-    padding-top: 100px;
+    padding-top: 60px;
   }
+ 
 }
 @media (max-width: 1024px) {
   .blog_details_main {
@@ -2036,7 +2037,7 @@
   }
 
   .blog_details_container {
-    padding-top: 80px;
+    padding-top: 40px;
   }
 
   .blog_details_left {
