--- a/frontend/src/pages/Contact/Contact.css
+++ b/frontend/src/pages/Contact/Contact.css
@@ -172,7 +172,7 @@
 }
 @media (max-width: 1399px) {
 .contact-page {
-  padding-top: 100px;
+  padding-top: 60px;
 }
 
 }
